--- a/src/Nav/style.css
+++ b/src/Nav/style.css
@@ -1,7 +1,7 @@
 /* Nav */
 .navbar {
   width: 100%;
-  height: 104px;
+  height: 50px;
   background-color: #0d0638;
   position: sticky;
   top: 0;
@@ -10,13 +10,7 @@
   align-items: center;
 }
 .navbar__right-item {
-  display: inline-block;
-  padding-right: 40px;
-  padding-left: 40px;
-  text-decoration: none;
-  color: white;
-  font-size: 20px;
-  font-weight: 500;
+  display: none;
 }
 .navbar__right-item:hover,
 .navbar__right-item:active,
@@ -26,8 +20,56 @@
 .navbar__left {
   color: white;
   font-family: 'Press Start 2P', cursive;
-  padding-left: 32px;
-  font-size: 16px;
+  padding-left: 10px;
+  font-size: 10px;
+}
+.navbar__right-btn {
+  display: block;
+  background-color: transparent;
+  background-image: url(../img/menu-icon.svg);
+  filter: invert(100%);
+  background-size: cover;
+  margin: 20px;
+  width: 20px;
+  height: 20px;
+  border: none;
+  cursor: pointer;
+}
+.navbar__right-btn:hover {
+  border: 1px solid white;
+}
+@media only screen and (min-width: 768px) {
+  .navbar__right-item {
+    display: inline-block;
+    padding-right: 20px;
+    padding-left: 20px;
+    text-decoration: none;
+    color: white;
+    font-size: 15px;
+    font-weight: 500;
+  }
+  .navbar__right-btn {
+    display: none;
+  }
 }
 @media only screen and (min-width: 1200px) {
+  .navbar {
+    height: 104px;
+  }
+  .navbar__right-item {
+    display: inline-block;
+    padding-right: 40px;
+    padding-left: 40px;
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+    font-weight: 500;
+  }
+  .navbar__left {
+    padding-left: 32px;
+    font-size: 16px;
+  }
+  .navbar__right-btn {
+    display: none;
+  }
 }
