--- a/src/Wiki/components/WikiContentHead/wiki_head.css
+++ b/src/Wiki/components/WikiContentHead/wiki_head.css
@@ -18,7 +18,7 @@
 
 .bracket {
   font-family: 'Roboto', sans-serif;
-  font-size: 160px;
+  font-size: 200px;
   color: #aa236d;
 }
 
@@ -32,18 +32,16 @@
   flex-wrap: wrap;
   font-family: 'Roboto', sans-serif;
   font: 30px;
-  padding-left: 15px;
+  padding: 0;
 }
 .wiki__title-text {
   font-family: 'Roboto', sans-serif;
   font: 16px;
-  padding-left: 15px;
+  padding: 0;
 }
 
 @media only screen and (min-width: 992px) {
-
-.wiki {
-  padding: 50px;
-}
-
+  .wiki {
+    padding: 50px;
+  }
 }
