--- a/src/Wiki/components/WikiContentHead/wiki_head.css
+++ b/src/Wiki/components/WikiContentHead/wiki_head.css
@@ -1,9 +1,9 @@
 /* WIKI HEADER */
 .wiki {
+  padding-top: 100px;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  padding: 20px;
 }
 .wiki__content {
   display: flex;
@@ -42,6 +42,6 @@
 
 @media only screen and (min-width: 992px) {
   .wiki {
-    padding: 50px;
+    padding: 100px 50px 50px 50px;
   }
 }
