--- a/src/Wiki/components/WikiContentSection/wiki_section.css
+++ b/src/Wiki/components/WikiContentSection/wiki_section.css
@@ -4,19 +4,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: rgba(196, 196, 196, 0.5);
+  background-color: rgba(196, 196, 196, 0.15);
+  margin: 20px;
 }
-
 .wiki__section {
   padding: 70px;
-
 }
-
-
 .wiki_section_subHeader {
   font-family: 'Roboto', sans-serif;
 }
-
 @media only screen and (min-width: 992px) {
   .wiki__sections {
     flex-direction: row;
@@ -26,25 +22,19 @@
   font-family: 'Press Start 2P', cursive;
   font-size: 16px;
   padding: 20px;
-  
 }
-
 .wiki__section-border {
   border: 1px solid black;
   margin: 10px;
   padding: 10px;
 }
-
 .wiki__section-snippet {
-font-family:'Roboto', sans-serif ;
-width: 20rem;
-
+  font-family: 'Roboto', sans-serif;
+  width: 20rem;
 }
-
 .wiki__section-header {
   color: #aa236d;
 }
-
 .wiki__section-text {
   text-align: justify;
   font-family: 'Roboto', sans-serif;
@@ -52,7 +42,6 @@ width: 20rem;
   line-height: 30px;
   padding: 10 20;
 }
-
 .title__img {
   min-width: 400px;
 }
