--- a/src/Nav/nav.css
+++ b/src/Nav/nav.css
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  z-index: 100;
 }
 .navbar__right-item {
   display: none;
