--- a/src/Game/Game1/game1.css
+++ b/src/Game/Game1/game1.css
@@ -1,4 +1,5 @@
-.game__quest {
+/* game 1 - background color */
+.game__quest1 {
   display: flex;
   justify-content: center;
 }
@@ -15,7 +16,7 @@
   display: flex;
   justify-content: space-between;
 }
-.drag {
+.drag__game1 {
   padding: 10px;
   border-radius: 5px;
   color: white;
