--- a/src/Game/Game4/game4.css
+++ b/src/Game/Game4/game4.css
@@ -1,20 +1,20 @@
-/* game 3 - flex (justify-content) */
-.game3__background {
+/* game 4  */
+.game4__background {
   width: 100%;
   height: 400px;
-  padding-top: 200px;
-  background-image: url('../../img/FIN_picture/position/fin_unicorn/landscape.svg');
+
+  background-image: url('../../img/FIN_picture/position/fin_krajina/landscape.svg');
   background-size: cover;
   background-position-x: center;
   height: 70vh;
 }
-.game__quest3 {
+.game__quest4 {
   display: flex;
   justify-content: center;
   width: 80%;
   margin: auto;
 }
-.game3__container {
+.game4__container {
   width: 90%;
   margin: auto;
   display: flex;
@@ -22,10 +22,7 @@
   align-items: center;
   flex-direction: row;
 }
-.unicorn {
-  width: 100px;
-}
-.drag__game3 {
+.drag__game4 {
   min-width: fit-content;
   background-color: #aa236d;
   border-radius: 5px;
@@ -41,11 +38,11 @@
 }
 .start {
   display: flex;
-  justify-content: flex-start;
-  align-items: center;
+  justify-content: center;
+  align-items: flex-start;
 }
 .end {
   display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  justify-content: center;
+  align-items: flex-end;
 }
