--- a/src/Game/Game3/game3.css
+++ b/src/Game/Game3/game3.css
@@ -2,7 +2,6 @@
 .game3__background {
   width: 100%;
   height: 400px;
-  padding-top: 200px;
   background-image: url('../../img/FIN_picture/position/fin_unicorn/landscape.svg');
   background-size: cover;
   background-position-x: center;
@@ -34,18 +33,19 @@
   font-weight: 700;
   margin: 20px;
 }
+.left {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+}
 .center {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.start {
+
+.right {
   display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-.end {
-  display: flex;
-  justify-content: flex-end;
+  justify-content: right;
   align-items: center;
 }
