--- a/src/Game/Game3/game3.css
+++ b/src/Game/Game3/game3.css
@@ -35,7 +35,7 @@
 }
 .left {
   display: flex;
-  justify-content: left;
+  justify-content: flex-start;
   align-items: center;
 }
 .center {
@@ -46,6 +46,6 @@
 
 .right {
   display: flex;
-  justify-content: right;
+  justify-content: flex-end;
   align-items: center;
 }
