--- a/src/Wiki/components/WikiContentSection/wiki_section.css
+++ b/src/Wiki/components/WikiContentSection/wiki_section.css
@@ -9,24 +9,14 @@
   font-family: 'Noto Sans', cursive;
   padding: 70px;
 }
-
+.wiki__section2 {
+  display: block;
+}
 .wiki__section1-header {
   font-family: 'Press Start 2P', sans-serif;
 }
 .wiki_section1_subHeader {
   font-family: 'Roboto', sans-serif;
-}
-@media only screen and (min-width: 992px) {
-}
-.wiki__section1 {
-  font-size: 16px;
-  padding: 20px;
-}
-.wiki__section2 {
-  display: flex;
-}
-.wiki__section2-item {
-  flex: 1 1 50%;
 }
 .wiki__section2-border {
   border: 1px solid black;
@@ -49,4 +39,18 @@
 }
 .title__img {
   min-width: 400px;
+}
+@media only screen and (min-width: 768px) {
+  .wiki__section1 {
+    font-size: 16px;
+    padding: 20px;
+  }
+  .wiki__section2 {
+    display: flex;
+    flex-direction: row;
+  }
+  .wiki__section2-item {
+    flex: 1 1 50%;
+    margin: 10px;
+  }
 }
