--- a/src/Wiki/components/WikiContentSection/wiki_section.css
+++ b/src/Wiki/components/WikiContentSection/wiki_section.css
@@ -22,6 +22,7 @@
   border: 1px solid black;
   margin: 10px;
   padding: 10px;
+  height: 100%;
 }
 .wiki__section-snippet {
   font-family: 'Roboto', sans-serif;
@@ -48,9 +49,14 @@
   .wiki__section2 {
     display: flex;
     flex-direction: row;
+    min-height: fit-content;
   }
   .wiki__section2-item {
     flex: 1 1 50%;
-    margin: 10px;
+    margin: 20px;
   }
+}
+.wiki__section-where {
+  color: #aa236d;
+  font-weight: 700;
 }
