--- a/src/Wiki/components/WikiContentSection/wiki_section.css
+++ b/src/Wiki/components/WikiContentSection/wiki_section.css
@@ -18,14 +18,27 @@
 .wiki_section1_subHeader {
   font-family: 'Roboto', sans-serif;
 }
+
 .wiki__section2-border {
 
-  border: 1px solid black;
+  border: 1.5px solid rgb(13,6,56);
+  margin: 10px;
+  padding: 10px;
+  height: 100%;
+}
+
+
+.wiki__section3-border {
+
+
   margin: 10px;
   padding: 10px;
   height: 100%;
 
 
+  border: 1.5px solid;
+  border-image-source: linear-gradient(90deg, rgb(170,35,109), rgb(13,6,56));
+  border-image-slice: 1;
 
 }
 .wiki__section-snippet {
