uprava stylu buttonu gamepage

--- a/src/Game/Game1/game1.css
+++ b/src/Game/Game1/game1.css
@@ -1,10 +1,15 @@
 /* game 1 - background color */
 .game__quest1 {
-  width: 80%;
+  width: 65%;
+  padding: 20px;
   margin: auto;
   display: flex;
   justify-content: center;
+  align-items: center;
   
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 400;
 }
 .game1__container {
   width: 90%;
