--- a/src/Game/Game3/game3.css
+++ b/src/Game/Game3/game3.css
@@ -8,10 +8,16 @@
   height: 70vh;
 }
 .game__quest3 {
+  width: 65%;
+  padding: 20px;
+  margin: auto;
   display: flex;
   justify-content: center;
-  width: 80%;
-  margin: auto;
+  align-items: center;
+  
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 400;
 }
 .game3__container {
   width: 90%;
