--- a/src/Game/Game3/game3.css
+++ b/src/Game/Game3/game3.css
@@ -14,10 +14,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  
+
   text-align: center;
   font-size: 1.5rem;
   font-weight: 400;
+}
+.game__quest3-text {
+  display: flex;
+  flex-direction: column;
+}
+.quest-nr {
+  font-weight: 700;
+  color: #aa236d;
 }
 .game3__container {
   width: 90%;
