--- a/src/Game/Game4/game4.css
+++ b/src/Game/Game4/game4.css
@@ -9,16 +9,23 @@
   height: 70vh;
 }
 .game__quest4 {
-  width: 65%;
   padding: 20px;
   margin: auto;
   display: flex;
   justify-content: center;
   align-items: center;
-  
+
   text-align: center;
   font-size: 1.5rem;
   font-weight: 400;
+}
+.game__quest4-text {
+  display: flex;
+  flex-direction: column;
+}
+.quest-nr {
+  font-weight: 700;
+  color: #aa236d;
 }
 .game4__container {
   width: 90%;
