--- a/src/Game/Game2/game2.css
+++ b/src/Game/Game2/game2.css
@@ -1,13 +1,12 @@
 /* game 2 - frames (borders) */
 .game2__background {
-  width: 100%;
-  height: 400px;
   padding-top: 200px;
   background-image: url('../../img/FIN_picture/frame/fin/background.svg');
   height: 60vh;
   position: relative;
-  background-size: cover;
   background-position-x: center;
+  width: 100%;
+  margin: auto;
 }
 .game__quest2 {
   padding: 20px;
@@ -52,7 +51,7 @@
 .picture2 {
   width: 200px;
   position: absolute;
-  left: 300px;
+  left: 250px;
   top: 150px;
 }
 .picture3 {
