--- a/src/Game/game.css
+++ b/src/Game/game.css
@@ -16,15 +16,15 @@
   .game__display-options {
     display: none;
   }
-}
-.game {
-  padding-top: 20px;
+  .game {
+    padding-top: 20px;
+    min-height: 87vh;
+  }
 }
 .game__title-flex {
   display: flex;
   padding: 50px;
 }
-
 @media only screen and (min-width: 768px) {
   .game__mobile {
     display: none;
