--- a/src/Header/header.css
+++ b/src/Header/header.css
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
   padding: 0 30px;
-  min-height: 100vh;
+  height: 100vh;
 }
 .title__img {
   width: 80%;
@@ -21,7 +21,6 @@
   font-size: 25px;
   color: #0d0638;
   font-weight: 900;
-  margin-bottom: 100px;
 }
 .header__btn-display {
   display: none;
@@ -37,6 +36,9 @@
 @media only screen and (min-width: 768px) {
   .header__btn-display {
     display: block;
+  }
+  .title__img {
+    width: 40%;
   }
 }
 @media only screen and (min-width: 992px) {
