--- a/src/Wiki/components/WikiContentHead/wiki_head.css
+++ b/src/Wiki/components/WikiContentHead/wiki_head.css
@@ -26,6 +26,7 @@
 .wiki__title-bracket-flex {
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 .wiki__title {
   display: flex;
