--- a/src/Game/Certificate/certificate.css
+++ b/src/Game/Certificate/certificate.css
@@ -7,7 +7,9 @@
 .cert__input-box {
   background-color: rgba(196, 196, 196, 0.3);
   padding: 20px;
+  width: 100%;
   display: flex;
+  justify-content: center;
   align-items: center;
 }
 .cert__label {
