--- a/src/Game/Game1/game1.css
+++ b/src/Game/Game1/game1.css
@@ -7,7 +7,7 @@
   align-items: center;
 
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 16px;
   font-weight: 400;
 }
 .game__quest1-text {
