--- a/src/Wiki/components/WikiContentHead/wiki_head.css
+++ b/src/Wiki/components/WikiContentHead/wiki_head.css
@@ -41,6 +41,11 @@
   font: 16px;
   padding: 0;
 }
+.wiki__vs-link {
+  padding: 0 5px;
+  color: #aa236d;
+  font-weight: 700;
+}
 
 @media only screen and (min-width: 992px) {
   .wiki {
