--- a/src/Links/links.css
+++ b/src/Links/links.css
@@ -53,6 +53,7 @@
 .fas {
   margin-right: 10px;
   font-size: 30px;
+  color: #0d0638;
 }
 @media only screen and (min-width: 992px) {
   .links__list-flex {
