--- a/src/Game/game.css
+++ b/src/Game/game.css
@@ -10,8 +10,16 @@
     width: 50%;
   }
   .game__mobile-text {
-    color: #aa236d;
-    font-weight: 700;
+    color: #0d0638;
+    text-align: center;
+    font-size: 24px;
+    padding: 20px;
+    background-color: rgba(196, 196, 196, 0.3);
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
   .game__display-options {
     display: none;
