--- a/src/Footer/footer.css
+++ b/src/Footer/footer.css
@@ -2,12 +2,18 @@
   background-color: #aa236d;
   padding-top: 20px;
 }
+.footer__flex {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .footer__authors {
   display: flex;
   justify-content: center;
   align-items: center;
   color: white;
   margin: 5px;
+  flex-direction: column;
 }
 .footer__czechitas {
   color: white;
@@ -15,6 +21,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 .footer__czechitas > a {
   color: white;
@@ -30,11 +37,6 @@
 .footer-closed {
   display: none;
 }
-.footer__flex {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
 .icon_footer {
   padding: 5px;
   margin: 0;
@@ -48,4 +50,17 @@
   color: white;
   padding: 5px;
   flex-grow: 4;
+}
+@media only screen and (min-width: 576px) {
+  .footer__authors {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    margin: 5px;
+    flex-direction: row;
+  }
+  .footer__authors > p:first-child {
+    margin-right: 10px;
+  }
 }
