--- a/src/Nav/nav.css
+++ b/src/Nav/nav.css
@@ -14,17 +14,19 @@
   display: none;
   padding-right: 40px;
   padding-left: 40px;
-  text-decoration: none;
+  text-decoration: underline;
+  text-decoration-color: #0d0638;
   color: white;
   font-size: 15px;
   font-weight: 500;
 }
-.navbar__right-item:hover,
+/* .navbar__right-item:hover,
 .navbar__right-item:active,
 .navbar__right-item:focus {
   text-decoration: underline;
   transition: 0.4s;
-}
+} */
+
 .navbar__left {
   color: white;
   font-family: 'Press Start 2P', cursive;
@@ -90,10 +92,13 @@
     display: inline-block;
     padding-right: 20px;
     padding-left: 20px;
-    text-decoration: none;
     color: white;
     font-size: 15px;
     font-weight: 500;
+  }
+  .is-active {
+    text-decoration: underline;
+    text-decoration-color: #fdff00;
   }
   .menu__btn {
     display: none;
@@ -107,7 +112,6 @@
     display: inline-block;
     padding-right: 40px;
     padding-left: 40px;
-    text-decoration: none;
     color: white;
     font-size: 20px;
     font-weight: 500;
